--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<script type="text/javascript" src="js/actions.js"></script>
-	</head>
-	<body>
-	    <input type=text name=key oninput="onInputChange(this)" onkeypress="runScript(event)"></input>
-	    <br>
-	    <select id="nodes">
-	    </select>
-	</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <script type="text/javascript" src="js/actions.js"></script>
+    </head>
+    <body>
+        <input type=text name=key oninput="onInputChange(this)" onkeypress="runScript(event)"></input>
+        <br>
+        <div class="divTable">
+            <div class="divTableBody" id="nodes">
+            </div>
+        </div>
+    </body>
 </html>
