--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="js/actions.js"></script>
     </head>
     <body>
-        <input type=text name=key oninput="onInputChange(this)" onkeypress="runScript(event)"></input>
+        <input id=keyInput type=text name=key oninput="onInputChange(this)" onkeypress="runScript(event)"></input>
         <br>
         <div class="divTable">
             <div class="divTableBody" id="nodes">
